# sentiment-analyzer-project

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: aws-clean.yml  aws-deploy-sentiment-analyzer.yml  docker-build-sentiment-analyzer.yml  docker-release-sentiment-analyzer.yml  testing-sentiment-analyzer.yml
aws_deployment/ami/: ami.yml  build-ami.json
aws_deployment/app/: app.tf
aws_deployment/infra/: infra.tf
routes/: analyzer_route.py  index_route.py
services/: constants_service.py  extractor_service.py
static/: main.css
templates/: index.html
tests/integration/: test_analyzer_endpoint_400_body.py  test_analyzer_endpoint_negativity.py  test_analyzer_endpoint_neutrality.py  test_analyzer_endpoint_positivity.py  test_endpoint_response_headers.py  test_endpoint_status_code.py  test_stress.py  test_template.py
tests/unit/: test_accuracy.py  test_analyzer_input_validity.py  test_compound.py  test_constants.py  test_negativity.py  test_neutrality.py  test_positivity.py
tests/unit/data/: accuracy_test_data.csv
