[tool.poetry]
name = "sentiment-analyzer-back"
version = "0.1.0"
description = "Data engineering project"
authors = ["cbw"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
vaderSentiment = "^3.3.2"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
requests = "^2.26.0"
pytest = "^6.2.5"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
futures3 = "^1.0.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
